Remove 7zip compression format
see https://wiki.chaotictrials.de/blog/simplebackups-7zip-removal
closes #70